--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,78 +3,82 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="10dp"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
 
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_marginRight="10dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:visibility="visible"
+            android:layout_marginRight="10dp"
             android:src="@drawable/logo"
-            />
+            android:visibility="visible" />
+
         <TextView
             android:id="@+id/txtlogin"
-            android:layout_marginTop="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="sans-serif-condensed"
+            android:text="Login to your Account"
             android:textSize="23dp"
-            android:textStyle="bold"
-            android:text="Login to your Account" />
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edtname"
             android:layout_width="250dp"
             android:layout_height="70dp"
-            android:textColor="@color/purple_500"
             android:drawableLeft="@drawable/ic_user"
-            android:hint="UserName">
+            android:hint="UserName"
+            android:textColor="@color/purple_500">
 
         </EditText>
-        <EditText
-            android:textColor="@color/purple_500"
-            android:id="@+id/edtpass"
-        android:layout_width="250dp"
-        android:inputType="textPassword"
-        android:layout_height="70dp"
-        android:drawableLeft="@drawable/ic_pass"
-        android:hint="Password">
 
-    </EditText>
+        <EditText
+            android:id="@+id/edtpass"
+            android:layout_width="250dp"
+            android:layout_height="70dp"
+            android:drawableLeft="@drawable/ic_pass"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColor="@color/purple_500">
+
+        </EditText>
+
         <Button
+            android:id="@+id/btnlogin"
             android:layout_width="250dp"
             android:layout_height="70dp"
             android:layout_margin="15dp"
-            android:textSize="20dp"
-            android:id="@+id/btnlogin"
-            android:text="Login">
-        </Button>
+            android:text="Login"
+            android:textSize="20dp"></Button>
+
         <TextView
-            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="19dp"
-            android:text="Don't have an account?" />
+            android:text="Don't have an account?"
+            android:textSize="19dp" />
+
         <Button
-        android:layout_width="120dp"
             android:id="@+id/btnsignin"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:textSize="20dp"
-            android:text="sign in">
-        </Button>
+            android:text="sign in"
+            android:textSize="20dp"></Button>
 
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
