--- a/app/src/main/res/layout/notifaction.xml
+++ b/app/src/main/res/layout/notifaction.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/purple_500"
+    android:background="@color/white"
     android:orientation="vertical"
     android:layout_height="match_parent">
 <TextView
