--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="10dp"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,67 +17,70 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_marginRight="17dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:visibility="visible"
+            android:layout_marginRight="17dp"
             android:src="@drawable/logo"
-            />
+            android:visibility="visible" />
+
         <TextView
             android:id="@+id/txtlogin"
-            android:layout_gravity="left"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/purple_500"
+            android:layout_gravity="left"
             android:layout_marginLeft="59dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="sans-serif-condensed"
+            android:text="Create your Account"
+            android:textColor="@color/purple_500"
             android:textSize="23dp"
-            android:text="Create your Account" />
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edtemail"
             android:layout_width="250dp"
-            android:textColor="@color/purple_500"
             android:layout_height="70dp"
-            android:hint="Email">
+            android:hint="Email"
+            android:textColor="@color/purple_500">
 
 
         </EditText>
+
         <EditText
             android:id="@+id/edtusername"
             android:layout_width="250dp"
             android:layout_height="70dp"
-            android:textColor="@color/purple_500"
-            android:hint="UserName">
+            android:hint="UserName"
+            android:textColor="@color/purple_500">
 
         </EditText>
+
         <EditText
             android:id="@+id/edtpass1"
-            android:textColor="@color/purple_500"
             android:layout_width="250dp"
             android:layout_height="70dp"
-            android:hint="Password">
+            android:hint="Password"
+            android:textColor="@color/purple_500">
 
         </EditText>
+
         <EditText
-            android:textColor="@color/purple_500"
             android:id="@+id/edtpass2"
             android:layout_width="250dp"
             android:layout_height="70dp"
-            android:hint="Confirm Password">
+            android:hint="Confirm Password"
+            android:textColor="@color/purple_500">
 
         </EditText>
+
         <Button
-            android:layout_width="120dp"
-            android:layout_marginTop="10dp"
             android:id="@+id/btnsignin"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:textSize="20dp"
-            android:text="sign in">
-        </Button>
-
+            android:layout_marginTop="10dp"
+            android:text="sign in"
+            android:textSize="20dp"></Button>
 
 
     </LinearLayout>
